# braidpool

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SPRINT.md  docker-compose.yml
.githooks/: pre-push  prepare-commit-msg
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/instructions/: cryptographer.instructions.md  performance-engineer.instructions.md  security-researcher.instructions.md  senior-architect.instructions.md  senior-db-engineer.instructions.md  senior-rust-dev.instructions.md  senior-ts-dev.instructions.md
.github/schemas/: review.schema.json
.github/scripts/: common.sh  save-review.sh  validate-review.py
braidpool-cli/: Cargo.toml
braidpool-cli/src/: main.rs
dashboard/: README.md  package-lock.json
dashboard/src/: App.tsx  URLs.ts  index.css
dashboard/src/components/BeadsTab/Trends/: HashrateTab.tsx  LatencyTab.tsx
dashboard/src/components/BitcoinStats/: Prices.tsx
dashboard/src/components/BraidPoolDAG/: BraidPoolDAG.tsx
dashboard/src/components/Dashboard/: BlockViewer.tsx
dashboard/src/components/Footer/: Footer.tsx
dashboard/src/components/Footer/__tests__/: Footer.test.tsx
dashboard/src/components/Mempool/: MempoolLatencyStats.tsx
dashboard/src/components/MinerInventory/: AnalyticsCharts.tsx  Constant.ts  MinerControls.tsx  MinerDashboardHeader.tsx  MinerInventoryDashboard.tsx  MinerTable.tsx  Types.ts
dashboard/src/components/NodeHealth/: Mempool.tsx  Network.tsx  NodeHealth.tsx
dashboard/src/components/common/: Header.tsx
docs/: CODEBASE_PRIMER.md  CODE_REVIEW_CHECKLIST.md  inventory_agent.md
inventory_agent/: Dockerfile  __init__.py  main.py  settings.py
miner_api/: README.md  config.py  main.py  models.py  requirements.txt  routes.py  services.py
node/: Cargo.toml  build.rs
node/src/: cli.rs  config.rs  error.rs  ipc.rs  lib.rs  macros.rs  main.rs  rpc_server.rs  stratum.rs  template_creator.rs
node/src/bead/: mod.rs  tests.rs
node/src/behaviour/: mod.rs  tests.rs
node/src/braid/: mod.rs  tests.rs
node/src/committed_metadata/: mod.rs  tests.rs
node/src/db/: db_handlers.rs  init_db.rs  mod.rs
node/src/ibd_manager/: mod.rs
node/src/ipc/: client.rs
node/src/peer_manager/: mod.rs
node/src/utils/: mod.rs
tests/: miner_device.py  test_data.json
