#Virtual workspace not creating a root package along with workspace as not needed .
[workspace]
members = ["node"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
hex = "0.4"
capnp = "0.21.6"
capnp-rpc = "0.21.0"
tokio = { version = "1", features = ["signal","rt", "net", "macros", "rt-multi-thread", "tracing", "io-util", "net", "rt", "time", "signal"] }
serde = { version = "^1.0", features = ["derive"] }
bincode = "1.3"
tokio-util = { version = "0.7.0", features = ["full", "compat"] }
tokio-stream = { version = "0.1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
futures = { version = "0.3.28", features = ["thread-pool"]}
bytes = "1.4.0"
serde_json = "1.0.140"
clap = { version = "4.4.2", features = ["derive", "string"] }
bitcoin = { git = "https://github.com/braidpool/rust-bitcoin.git", branch = "cpunet",features=["serde"]}
bitcoin_hashes = { version = "0.16" }
bitcoincore-rpc = { version = "0.19.0"}
bitcoincore-rpc-json = { version = "0.19.0"}
bitcoincore-zmq = { version = "1.5.2", git = "https://github.com/antonilol/rust-bitcoincore-zmq.git", features = ["async"] }
shellexpand = "3.1.0"
num = { version = "0.4.1", features = ["serde", "rand"] }
rand = "0.8"
secp256k1 = "0.30.0"
libp2p = { version = "0.55.0", features = ["identify", "quic", "tokio","ping","macros","kad","dns","request-response","floodsub"] }
toml = "0.8.22"
jsonrpsee = {version = "0.25.1",features = ["full"]}
async-trait = "0.1.88"
sqlx = {version="0.8.6",features=[ "sqlite",
  "macros",
  "chrono",
  "uuid","regexp","runtime-tokio","runtime-async-std","derive"]}
strum = { version = "0.26", features = ["derive"] }
if-addrs = "0.13"
anyhow = "1.0.100"


