[package]
name = "node"
version.workspace = true
edition.workspace =  true

[dependencies]
hex = { workspace = true }
capnp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
capnp-rpc={workspace = true}
bincode = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
bitcoin = { workspace = true }
bitcoin_hashes = { workspace = true }
bitcoincore-rpc = { workspace = true }
bitcoincore-rpc-json = { workspace = true }
bitcoincore-zmq = { workspace = true }
shellexpand = { workspace = true }
num = { workspace = true }
rand = { workspace = true }
secp256k1 = { workspace = true }
libp2p = { workspace = true }
toml = { workspace = true }
jsonrpsee = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true}
strum = { workspace = true }
if-addrs = { workspace = true }
anyhow = { workspace = true }


[build-dependencies]
capnpc = "0.24.0"
